--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_launcher_icons: 0.7.5^
+  flutter_launcher_icons: 0.7.5
 
 
   # The following adds the Cupertino Icons font to your application.
