--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_launcher_icons: 0.7.5
-  flutter_launcher_icons: 0.0.1
+  flutter_launcher_name: 0.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
